[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gnosys-backend"
version = "1.0.0"
description = "Local FastAPI backend for Gnosys memory storage"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.7,<3.0",
  "uvicorn>=0.30,<1.0",
  "numpy>=1.0",
  "croniter>=0.3,<2.0",
  "keyring>=25.0,<26.0",
  "sentence-transformers>=2.2.0",
  "typer>=0.12.0",
  "httpx>=0.27.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]
local-embeddings = [
  "sentence-transformers>=2.0,<3.0",
]
openai-embeddings = [
  "openai>=1.0,<2.0",
]
all-embeddings = [
  "sentence-transformers>=2.0,<3.0",
  "openai>=1.0,<2.0",
]

[project.scripts]
gnosys-backend = "gnosys_backend.app:main"
gnosys = "gnosys_backend.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gnosys_backend"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
