[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gnosys-backend"
version = "0.1.0"
description = "Foundational FastAPI backend scaffold for Gnosys"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.7,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gnosys_backend"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
